# yatt

./: .gitignore  README.md  example.env  gui.py  main.py  pyproject.toml
app/: config.py  constants.py  files.py  main_window.py  model.py  providers.py  ui.py  wpm.py
app/multiplayer/: auth.py  ws_client.py
app/windows/: server_window.py
assets/: 1000.json  alice-1.txt  example-text.txt
